--- a/minik.client/package.json
+++ b/minik.client/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.5.2",
     "reactstrap": "^9.2.3"
   },
   "devDependencies": {
