Revert "Profile kısmı eklendi. Kullanıcı rollerine göre profilde gösterilecek paneller eklendi. İlan listelemesi optimize edildi. Veritabanı .sql olarak dışa aktarıldı. AppDbContext eklendi. House image model ve controller ismi düzenlendi TinyHouseController'a müşteri idsine göre evleri get etme eklendi."
This reverts commit 11dc957cacf1988bdd2c77045cd52d09a30ef67c.

--- a/Minik.Server/Minik.Server.csproj
+++ b/Minik.Server/Minik.Server.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -8,11 +8,6 @@
     <SpaProxyLaunchCommand>npm run dev</SpaProxyLaunchCommand>
     <SpaProxyServerUrl>https://localhost:65229</SpaProxyServerUrl>
   </PropertyGroup>
-
-  <ItemGroup>
-    <!-- Data\ApplicationDbContext.cs dosyasını çıkarma kısmını kaldırın -->
-    <!-- <Compile Remove="Data\ApplicationDbContext.cs" /> -->
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy">
