--- a/minik.client/package.json
+++ b/minik.client/package.json
@@ -15,8 +15,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.2",
-    "reactstrap": "^9.2.3",
-    "styled-components": "^6.1.17"
+    "reactstrap": "^9.2.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
