--- a/Minik.Server/Minik.Server.csproj
+++ b/Minik.Server/Minik.Server.csproj
@@ -10,11 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <!-- Data\ApplicationDbContext.cs dosyasını çıkarma kısmını kaldırın -->
-    <!-- <Compile Remove="Data\ApplicationDbContext.cs" /> -->
-  </ItemGroup>
-
-  <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy">
       <Version>8.*-*</Version>
     </PackageReference>
