--- a/minik.client/package.json
+++ b/minik.client/package.json
@@ -11,13 +11,15 @@
   },
   "dependencies": {
     "@mui/icons-material": "^7.0.2",
+    "@tailwindcss/vite": "^4.1.6",
     "bootstrap": "^5.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.2",
     "react-toastify": "^11.0.5",
     "reactstrap": "^9.2.3",
-    "styled-components": "^6.1.17"
+    "styled-components": "^6.1.17",
+    "tailwindcss": "^4.1.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
