--- a/minik.client/package.json
+++ b/minik.client/package.json
@@ -13,7 +13,9 @@
     "@mui/icons-material": "^7.0.2",
     "@tailwindcss/vite": "^4.1.6",
     "bootstrap": "^5.3.5",
+    "date-fns": "^4.1.0",
     "react": "^19.0.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.2",
     "react-toastify": "^11.0.5",
