Admin Panel version 2.0

--- a/Minik.Server/appsettings.json
+++ b/Minik.Server/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
     "ConnectionStrings": {
-        "DefaultConnection": "Server=localhost;Database=MinikDb;Trusted_Connection=True;TrustServerCertificate=True;"
+        "DefaultConnection": "Server=MERTPC;Database=MinikDb;Trusted_Connection=True;TrustServerCertificate=True;"
     },
     "Logging": {
         "LogLevel": {
